# api/request/auth.go
@@ -1,5 +1,5 @@
 package request
 
-type GenerateTokenReq struct {
+type GenerateTableTokenReq struct {
 	TableIdentity string `json:"table_identity" binding:"required"` // 反馈表格 Identity，反馈表的唯一标识
 }
